[808] Add job for rcptt tests
bug: 808 

Change-Id: Ibd6bf7a24246803ee1c177c89f9763baf677dcb5
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>