@@ -31,8 +31,38 @@ This file was generated by Eclipse EGF
     <condition property="sdk.url" value="${env.sdk.url}">
         <isset property="env.sdk.url" />
     </condition>
+    <condition property="rcptt.url" value="${env.rcptt.url}">
+        <isset property="env.rcptt.url" />
+    </condition>
     <condition property="kitalpha_version" value="${env.kitalpha_version}">
         <isset property="env.kitalpha_version" />
+    </condition>
+    <condition property="aut-path" value="${env.aut-path}">
+        <isset property="env.aut-path" />
+    </condition>
+    <condition property="test-results" value="${env.test-results}">
+        <isset property="env.test-results" />
+    </condition>
+    <condition property="runner-workspace" value="${env.runner-workspace}">
+        <isset property="env.runner-workspace" />
+    </condition>
+    <condition property="aut-workspace" value="${env.aut-workspace}">
+        <isset property="env.aut-workspace" />
+    </condition>
+    <condition property="aut-stdout" value="${env.aut-stdout}">
+        <isset property="env.aut-stdout" />
+    </condition>
+    <condition property="junit-report" value="${env.junit-report}">
+        <isset property="env.junit-report" />
+    </condition>
+    <condition property="html-report" value="${env.html-report}">
+        <isset property="env.html-report" />
+    </condition>
+    <condition property="jacoco-report" value="${env.jacoco-report}">
+        <isset property="env.jacoco-report" />
+    </condition>
+    <condition property="test-locations" value="${env.test-locations}">
+        <isset property="env.test-locations" />
     </condition>
 
     <property file="build.properties" />
@@ -77,7 +107,17 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dworkspace=${workspace}"/>
 	                <jvmarg value="-Dtimestamp=${timestamp}"/>
 	                <jvmarg value="-Dsdk.url=${sdk.url}"/>
+	                <jvmarg value="-Drcptt.url=${rcptt.url}"/>
 	                <jvmarg value="-Dkitalpha_version=${kitalpha_version}"/>
+	                <jvmarg value="-Daut-path=${aut-path}"/>
+	                <jvmarg value="-Dtest-results=${test-results}"/>
+	                <jvmarg value="-Drunner-workspace=${runner-workspace}"/>
+	                <jvmarg value="-Daut-workspace=${aut-workspace}"/>
+	                <jvmarg value="-Daut-stdout=${aut-stdout}"/>
+	                <jvmarg value="-Djunit-report=${junit-report}"/>
+	                <jvmarg value="-Dhtml-report=${html-report}"/>
+	                <jvmarg value="-Djacoco-report=${jacoco-report}"/>
+	                <jvmarg value="-Dtest-locations=${test-locations}"/>
                     <arg value="-data" />
                     <arg value="@{workspace}" />
                 <args />
@@ -248,7 +288,17 @@ This file was generated by Eclipse EGF
 		<echo message="Builtin $${workspace} : ${workspace}" />
 		<echo message="Builtin $${timestamp} : ${timestamp}" />
 		<echo message="Provided $${sdk.url} : ${sdk.url}" />
+		<echo message="Provided $${rcptt.url} : ${rcptt.url}" />
 		<echo message="Provided $${kitalpha_version} : ${kitalpha_version}" />
+		<echo message="Provided $${aut-path} : ${aut-path}" />
+		<echo message="Provided $${test-results} : ${test-results}" />
+		<echo message="Provided $${runner-workspace} : ${runner-workspace}" />
+		<echo message="Provided $${aut-workspace} : ${aut-workspace}" />
+		<echo message="Provided $${aut-stdout} : ${aut-stdout}" />
+		<echo message="Provided $${junit-report} : ${junit-report}" />
+		<echo message="Provided $${html-report} : ${html-report}" />
+		<echo message="Provided $${jacoco-report} : ${jacoco-report}" />
+		<echo message="Provided $${test-locations} : ${test-locations}" />
 	</target>
 
     <target name="init.build.properties">
@@ -271,7 +321,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,download_TP,import_tests_projects,Resource_Reuse" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,import_tests_projects,Resource_Reuse,test" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -328,6 +378,25 @@ This file was generated by Eclipse EGF
 	</target>
 
 
+	<target name="Install_RCPTT">
+		<antcall target="install.rcptt"/>
+	</target>
+
+<target name="install.rcptt">
+	<available file="${tools}/rcptt" property="rcptt.exists" />
+	<antcall target="do.install.rcptt" />
+</target>
+
+<target name="do.install.rcptt" unless="rcptt.exists">
+	<echo message="Fetching headless rcptt application" />
+	<tempfile destdir="${java.io.tmpdir}" prefix="rcptt-" suffix=".zip" property="rcptt.zip" deleteonexit="true" />
+	<get src="${rcptt.url}" dest="${rcptt.zip}" />
+	<mkdir dir="${tools}" />
+	<unzip src="${rcptt.zip}" dest="${tools}/rcptt" />
+	<delete file="${rcptt.zip}" />
+</target>
+
+
 	<target name="download_TP">
 		<antcall target="download_tp"/>
 	</target>
@@ -353,5 +422,45 @@ This file was generated by Eclipse EGF
 
 </target> 
 
+
+
+	<target name="test">
+		<antcall target="test"/>
+	</target>
+
+<target name="test">
+		<java jar="${runner-path}/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar" fork="true">
+			<arg value="-application" />      
+			<arg value="org.eclipse.rcptt.runner.headless" />
+
+			<arg value="-data" />
+			<arg value="${runner-workspace}" />
+
+			<arg value="-aut" />      
+			<arg value="${aut-path}" />
+
+			<arg value="-autWsPrefix" />      
+			<arg value="${aut-workspace}" />
+	   
+			<arg value="-autConsolePrefix" />
+			<arg value="${aut-stdout}"/>
+			
+			<arg value="-htmlReport" />
+			<arg value="${html-report}" />
+			
+			<arg value="-junitReport" />
+			<arg value="${junit-report}" />
+
+			<arg value="-import" />
+			<arg value="${test-location}" />
+
+			<arg value="-testOptions" />      
+			<arg value="testExecTimeout=300;execTimeout=3600" />
+			
+<!--			<arg value="-autVMArgs" />      
+			<arg value="-Xmx1024m;-XX:MaxPermSize=256m;-javaagent:${jacoco-path}/lib/jacocoagent.jar=destfile=${jacoco-report}" />
+-->
+		</java>
+	</target>
 
 </project>
